--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>voyalog</title>
+    <meta name="description" content="Voyalog - Pin your travel photos on a beautiful vintage map and share your adventures with the world." />
+    <title>Voyalog — Map Your Memories</title>
   </head>
   <body>
     <div id="root"></div>
